<resources>
    <string name="app_name">Chat App</string>
    <string name="login_to_continue">login_to_continue</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="sign_in">Sign_In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="Create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="btn_sign_up">Sign up</string>
</resources>